[gd_scene load_steps=18 format=2]

[ext_resource path="res://Cutscene/DialogueBoxLeft.png" type="Texture" id=1]
[ext_resource path="res://Cutscene/TextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Cutscene/NotoSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Cutscene/CutsceneInGame.gd" type="Script" id=4]
[ext_resource path="res://MM2Font_Smaller.tres" type="DynamicFont" id=5]
[ext_resource path="res://stepmania-compat/smSprite.gd" type="Script" id=6]
[ext_resource path="res://Cutscene/ChoiceHandler.gd" type="Script" id=7]
[ext_resource path="res://Cutscene/Mugshots/test.png" type="Texture" id=8]
[ext_resource path="res://Cutscene/TextboxSpriteMan.gd" type="Script" id=9]
[ext_resource path="res://Cutscene/Mugshots/test3.png" type="Texture" id=10]
[ext_resource path="res://Cutscene/Mugshots/test2.png" type="Texture" id=11]
[ext_resource path="res://Cutscene/VN MaskOverlay (stretch).png" type="Texture" id=12]
[ext_resource path="res://Cutscene/maskBox2.png" type="Texture" id=13]
[ext_resource path="res://Cutscene/MugshotImageHandler.gd" type="Script" id=14]

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D
tool

export(int) var SPEED = 50

onready var line = $Sprite2
func _process(delta):
	var y = line.region_rect.position.y
	y-=SPEED*delta
	if y <= 0:
		y=225
	line.region_rect.position.y=y
"

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 3 )

[node name="CutscenePlayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )
standalone_message = PoolStringArray( "msg|hello world." )

[node name="Music" type="Node" parent="."]

[node name="SoundEffects" type="Node" parent="."]

[node name="CenterContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0125
anchor_bottom = 1.0
margin_top = 460.0
margin_right = -16.0
margin_bottom = -53.0
rect_min_size = Vector2( 876, 207 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="Control" parent="CenterContainer"]
anchor_top = -0.113
anchor_right = 1.0
anchor_bottom = 0.896
margin_top = -0.0739994
margin_bottom = 0.0630035
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="smSprite" type="TextureRect" parent="CenterContainer/TextBox"]
margin_left = 187.0
margin_top = 8.909
margin_right = 402.0
margin_bottom = 207.909
texture = ExtResource( 8 )
stretch_mode = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textBackground" type="TextureRect" parent="CenterContainer/TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 315.0
margin_right = -960.0
margin_bottom = 158.0
grow_vertical = 2
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 103 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer_v2" type="Node2D" parent="."]
position = Vector2( 640, 550 )

[node name="TextboxBack" type="Sprite" parent="CenterContainer_v2"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Mugshots" type="Node2D" parent="CenterContainer_v2"]
position = Vector2( -352, -2 )
script = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="CenterContainer_v2/Mugshots"]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )

[node name="Mugshot" type="Sprite" parent="CenterContainer_v2/Mugshots"]
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
script = ExtResource( 14 )

[node name="MaskOverlay" type="Node2D" parent="CenterContainer_v2/Mugshots"]
script = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="CenterContainer_v2/Mugshots/MaskOverlay"]
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 0, 0, 192, 192 )

[node name="Sprite2" type="Sprite" parent="CenterContainer_v2/Mugshots/MaskOverlay"]
material = SubResource( 3 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 0, 217.737, 192, 192 )

[node name="textActor_better" type="RichTextLabel" parent="CenterContainer_v2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.62
margin_top = -92.5471
margin_right = 453.38
margin_bottom = 89.4529
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "\"[color=#ff00ff]Lorem ipsum[/color] dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor  (If you can see this, the cutscene failed to load. File a bug report!)"
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor  (If you can see this, the cutscene failed to load. File a bug report!)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerActor" type="Label" parent="CenterContainer_v2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -443.736
margin_top = -147.86
margin_right = 432.264
margin_bottom = 32.1399
rect_pivot_offset = Vector2( 0, 90 )
custom_fonts/font = SubResource( 1 )
text = "Dandelion"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressStartToSkip" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -35.0
margin_right = 339.0
custom_fonts/font = ExtResource( 5 )
text = "PRESS START TO SKIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextboxTween" type="Tween" parent="."]
pause_mode = 2
playback_process_mode = 0

[node name="Choices" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
